# rust-public-cli-template

./: AGENTS.md  AGENTS.ts  Cargo.toml  fnox.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/command/: print_command.rs
